<resources>
    <string name="app_name">SalesDiary3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--login strings-->
    <string name="sales_record_suffix">_Sales_Records</string>
    <string name="invalid_user_message">User name does not exist</string>
    <string name="error_message">ERROR MESSAGE</string>
    <string name="space_pattern">%s</string>
    <string name="closebtn">Close</string>
    <string name="info_dialog_title">MESSAGE</string>
    <string name="info_dialog_message">Logging in ...</string>
    <string name="Okbtn">Ok</string>
    <string name="error_dialog_title">ERROR MESSAGE</string>
    <string name="error_dialog_message">No Product Catalog available!</string>
    <string name="confirm_dialog_title">CONFIRMATION MESSAGE</string>
    <string name="confirm_dialog_message">Do you wish to create a product catalog now</string>
    <string name="nobtn">No</string>
    <string name="yesbtn">Yes</string>
    <string name="error_password_message">Wrong password!</string>
    <string name="error_login_message">Invalid or no Username and Password specified</string>
    <string name="confirm_question_message">Are you sure?</string>

    <string name="inflowsummaryreport">Inflow</string>
    <string name="outflowsummaryreport">Outflow</string>
    <string name="productSalesSummary">Products Info</string>
    <string name="AddProducts">Add Products</string>
    <string name="catalogue">Catalogue</string>
    <string name="salesRecord">Sales Record</string>
    <string name="salesReport">Sales Reports</string>
    <string name="Credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="header_text">What are your details?</string>
    <string name="Avatar">Avatar</string>
    <string name="user_name_label">User name:</string>
    <string name="user_name_hint">user name</string>
    <string name="email_hint">Email</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="log_up_button_text">Log in</string>
    <string name="log_in_button_text">LOG IN</string>

    <!-- product catalog fields-->
    <string name="product">PRODUCT</string>
    <string name="image">IMAGE</string>
    <string name="price">PRICE</string>
    <string name="stock">STOCK</string>
</resources>
