<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
<TextView
    android:id="@+id/signupHeader"
    android:text="@string/header_text" android:layout_gravity="center" android:layout_width="260dp"
    android:layout_height="60dp"
    android:textStyle="bold"
    android:layout_marginLeft="@dimen/header_left_margin"
    android:layout_marginStart="@dimen/header_left_margin"
    android:textSize="@dimen/header_text_size"
    android:textColor="#fff"/>

 <GridLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:rowCount="11"
     android:columnCount="3"
     android:layout_gravity="center"
     android:layout_below="@+id/signupHeader"
     android:layout_marginLeft="@dimen/left_margin"
     android:layout_marginStart="@dimen/left_margin">

    <ImageView android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:contentDescription="@string/Avatar"
        android:src="@mipmap/avatar"/>
     <Space android:layout_row="2" android:layout_height="25dp" android:layout_column="1"/>
    <TextView android:text="@string/user_name_label"
        android:layout_height="30dp"
        android:textSize="25sp"

        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:textColor="#fff"/>
   <EditText android:id="@+id/username"
       android:layout_column="2"
       android:layout_row="3"
       android:layout_width="150dp"
       android:layout_height="30dp"
       android:background="#fff"
       android:hint="@string/user_name_hint"
       />
     <Space android:layout_row="4" android:layout_height="25dp" android:layout_column="1"/>
    <TextView android:text="@string/email_label"
        android:layout_height="30dp"
        android:textSize="@dimen/label_size"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:textColor="#fff"/>
    <EditText android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_column="2"
        android:layout_row="5"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="#fff"
        android:hint="@string/email_hint"/>
     <Space android:layout_row="6" android:layout_height="25dp" android:layout_column="1"/>
    <TextView android:text="@string/password_label"
        android:layout_height="30dp"
        android:textSize="@dimen/label_size"

        android:layout_width="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:textColor="#fff"/>
    <EditText android:id="@+id/password"
        android:layout_row="7"
        android:layout_column="2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:background="#fff"
        android:hint="@string/password_hint"/>
     <Space android:layout_row="8" android:layout_height="25dp" android:layout_column="1"/>
    <Button android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_up_button_text"
        android:layout_column="1"
        android:textSize="@dimen/label_size"
        android:layout_row="9"
        android:textColor="#005"
        android:textStyle="bold"
        />
    <Button android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:textSize="@dimen/label_size"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:layout_column="2"
        android:layout_row="9"
        android:textColor="#005"
        android:textStyle="bold"/>

</GridLayout>
</RelativeLayout>