<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <TextView
        android:text="@string/header_text"
        android:layout_gravity="center"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:textSize="@dimen/header_text_size"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginStart="@dimen/left_margin"
        android:textColor="#fff"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="11"
        android:columnCount="3"
        android:layout_gravity="center">
        <ImageView android:layout_column="1"
            android:contentDescription="@string/Avatar"
            android:layout_row="1"
            android:src="@mipmap/avatar"/>
        <Space android:layout_row="2" android:layout_height="25dp" android:layout_column="1"/>

        <TextView android:text="@string/user_name_label"
            android:layout_height="30dp"
            android:textSize="@dimen/label_size"

            android:layout_width="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:textColor="#fff"/>
        <EditText android:id="@+id/username2"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:hint="@string/user_name_hint"/>
        <Space android:layout_row="4" android:layout_height="25dp" android:layout_column="1"/>


        <TextView android:text="@string/password_label"
            android:layout_height="30dp"
            android:textSize="@dimen/label_size"

            android:layout_width="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:textColor="#fff"/>
        <EditText android:id="@+id/password2"
            android:layout_row="7"
            android:layout_column="2"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:background="#fff"
            android:hint="@string/password_hint"/>
        <Space android:layout_row="8" android:layout_height="25dp" android:layout_column="1"/>
        <Button android:id="@+id/Login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_button_text"
            android:layout_column="1"
            android:textSize="@dimen/label_size"
            android:layout_row="9"
            android:textColor="#005"
            android:textStyle="bold"/>
        <Button android:id="@+id/signup2"
            android:layout_width="wrap_content"
            android:textSize="@dimen/label_size"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_text"
            android:layout_column="2"
            android:layout_row="9"
            android:textColor="#005"
            android:textStyle="bold"/>

    </GridLayout>
</LinearLayout>